// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`resizable > horizontal 1`] = `
<div>
  <div
    class="flex size-full aria-[orientation=vertical]:flex-col min-h-48 max-w-lg rounded-lg border"
    data-group="true"
    data-slot="resizable-panel-group"
    data-testid="_r_0_"
    id="_r_0_"
    style="height: 100%; width: 100%; overflow: hidden; display: flex; flex-flow: row; touch-action: pan-y"
  >
    <div
      data-panel="true"
      data-slot="resizable-panel"
      data-testid="_r_1_"
      id="_r_1_"
      style="min-height: 0px; max-height: 100%; height: auto; min-width: 0px; max-width: 100%; width: auto; border: 0px; padding: 0px; margin: 0px; display: flex; flex: 29.999 1 0px; overflow: hidden"
    >
      <div
        style="max-height: 100%; max-width: 100%; flex-grow: 1; touch-action: pan-y"
      >
        <div
          class="flex h-full items-center justify-center p-4"
        >
          <span
            class="text-xs text-muted-foreground"
          >
            Sidebar
          </span>
        </div>
      </div>
    </div>
    <div
      aria-controls="_r_1_"
      aria-orientation="vertical"
      aria-valuemax="100"
      aria-valuemin="4.866"
      aria-valuenow="29.999"
      class="relative flex w-px items-center justify-center bg-border ring-offset-background after:absolute after:inset-y-0 after:left-1/2 after:w-1 after:-translate-x-1/2 focus-visible:ring-1 focus-visible:ring-ring focus-visible:outline-hidden aria-[orientation=horizontal]:h-px aria-[orientation=horizontal]:w-full aria-[orientation=horizontal]:after:left-0 aria-[orientation=horizontal]:after:h-1 aria-[orientation=horizontal]:after:w-full aria-[orientation=horizontal]:after:translate-x-0 aria-[orientation=horizontal]:after:-translate-y-1/2 [&[aria-orientation=horizontal]>div]:rotate-90"
      data-separator="inactive"
      data-slot="resizable-handle"
      data-testid="_r_2_"
      id="_r_2_"
      role="separator"
      style="flex: 0 0 auto; touch-action: none"
      tabindex="0"
    />
    <div
      data-panel="true"
      data-slot="resizable-panel"
      data-testid="_r_3_"
      id="_r_3_"
      style="min-height: 0px; max-height: 100%; height: auto; min-width: 0px; max-width: 100%; width: auto; border: 0px; padding: 0px; margin: 0px; display: flex; flex: 70.001 1 0px; overflow: hidden"
    >
      <div
        style="max-height: 100%; max-width: 100%; flex-grow: 1; touch-action: pan-y"
      >
        <div
          class="flex h-full items-center justify-center p-4"
        >
          <span
            class="text-xs text-muted-foreground"
          >
            Content
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`resizable > threePanels 1`] = `
<div>
  <div
    class="flex size-full aria-[orientation=vertical]:flex-col min-h-48 max-w-lg rounded-lg border"
    data-group="true"
    data-slot="resizable-panel-group"
    data-testid="_r_c_"
    id="_r_c_"
    style="height: 100%; width: 100%; overflow: hidden; display: flex; flex-flow: row; touch-action: pan-y"
  >
    <div
      data-panel="true"
      data-slot="resizable-panel"
      data-testid="_r_d_"
      id="_r_d_"
      style="min-height: 0px; max-height: 100%; height: auto; min-width: 0px; max-width: 100%; width: auto; border: 0px; padding: 0px; margin: 0px; display: flex; flex: 25.001 1 0px; overflow: hidden"
    >
      <div
        style="max-height: 100%; max-width: 100%; flex-grow: 1; touch-action: pan-y"
      >
        <div
          class="flex h-full items-center justify-center p-4"
        >
          <span
            class="text-xs text-muted-foreground"
          >
            Tables
          </span>
        </div>
      </div>
    </div>
    <div
      aria-controls="_r_d_"
      aria-orientation="vertical"
      aria-valuemax="96.35"
      aria-valuemin="3.65"
      aria-valuenow="25.001"
      class="relative flex w-px items-center justify-center bg-border ring-offset-background after:absolute after:inset-y-0 after:left-1/2 after:w-1 after:-translate-x-1/2 focus-visible:ring-1 focus-visible:ring-ring focus-visible:outline-hidden aria-[orientation=horizontal]:h-px aria-[orientation=horizontal]:w-full aria-[orientation=horizontal]:after:left-0 aria-[orientation=horizontal]:after:h-1 aria-[orientation=horizontal]:after:w-full aria-[orientation=horizontal]:after:translate-x-0 aria-[orientation=horizontal]:after:-translate-y-1/2 [&[aria-orientation=horizontal]>div]:rotate-90"
      data-separator="inactive"
      data-slot="resizable-handle"
      data-testid="_r_e_"
      id="_r_e_"
      role="separator"
      style="flex: 0 0 auto; touch-action: none"
      tabindex="0"
    />
    <div
      data-panel="true"
      data-slot="resizable-panel"
      data-testid="_r_f_"
      id="_r_f_"
      style="min-height: 0px; max-height: 100%; height: auto; min-width: 0px; max-width: 100%; width: auto; border: 0px; padding: 0px; margin: 0px; display: flex; flex: 49.998 1 0px; overflow: hidden"
    >
      <div
        style="max-height: 100%; max-width: 100%; flex-grow: 1; touch-action: pan-y"
      >
        <div
          class="flex h-full items-center justify-center p-4"
        >
          <span
            class="text-xs text-muted-foreground"
          >
            Query
          </span>
        </div>
      </div>
    </div>
    <div
      aria-controls="_r_f_"
      aria-orientation="vertical"
      aria-valuemax="71.349"
      aria-valuemin="0"
      aria-valuenow="49.998"
      class="relative flex w-px items-center justify-center bg-border ring-offset-background after:absolute after:inset-y-0 after:left-1/2 after:w-1 after:-translate-x-1/2 focus-visible:ring-1 focus-visible:ring-ring focus-visible:outline-hidden aria-[orientation=horizontal]:h-px aria-[orientation=horizontal]:w-full aria-[orientation=horizontal]:after:left-0 aria-[orientation=horizontal]:after:h-1 aria-[orientation=horizontal]:after:w-full aria-[orientation=horizontal]:after:translate-x-0 aria-[orientation=horizontal]:after:-translate-y-1/2 [&[aria-orientation=horizontal]>div]:rotate-90"
      data-separator="inactive"
      data-slot="resizable-handle"
      data-testid="_r_g_"
      id="_r_g_"
      role="separator"
      style="flex: 0 0 auto; touch-action: none"
      tabindex="0"
    />
    <div
      data-panel="true"
      data-slot="resizable-panel"
      data-testid="_r_h_"
      id="_r_h_"
      style="min-height: 0px; max-height: 100%; height: auto; min-width: 0px; max-width: 100%; width: auto; border: 0px; padding: 0px; margin: 0px; display: flex; flex: 25.001 1 0px; overflow: hidden"
    >
      <div
        style="max-height: 100%; max-width: 100%; flex-grow: 1; touch-action: pan-y"
      >
        <div
          class="flex h-full items-center justify-center p-4"
        >
          <span
            class="text-xs text-muted-foreground"
          >
            AI
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`resizable > vertical 1`] = `
<div>
  <div
    class="flex size-full aria-[orientation=vertical]:flex-col min-h-64 max-w-lg rounded-lg border"
    data-group="true"
    data-slot="resizable-panel-group"
    data-testid="_r_4_"
    id="_r_4_"
    style="height: 100%; width: 100%; overflow: hidden; display: flex; flex-flow: column; touch-action: pan-x"
  >
    <div
      data-panel="true"
      data-slot="resizable-panel"
      data-testid="_r_5_"
      id="_r_5_"
      style="min-height: 0px; max-height: 100%; height: auto; min-width: 0px; max-width: 100%; width: auto; border: 0px; padding: 0px; margin: 0px; display: flex; flex: 60 1 0px; overflow: hidden"
    >
      <div
        style="max-height: 100%; max-width: 100%; flex-grow: 1; touch-action: pan-x"
      >
        <div
          class="flex h-full items-center justify-center p-4"
        >
          <span
            class="text-xs text-muted-foreground"
          >
            Editor
          </span>
        </div>
      </div>
    </div>
    <div
      aria-controls="_r_5_"
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="60"
      class="relative flex w-px items-center justify-center bg-border ring-offset-background after:absolute after:inset-y-0 after:left-1/2 after:w-1 after:-translate-x-1/2 focus-visible:ring-1 focus-visible:ring-ring focus-visible:outline-hidden aria-[orientation=horizontal]:h-px aria-[orientation=horizontal]:w-full aria-[orientation=horizontal]:after:left-0 aria-[orientation=horizontal]:after:h-1 aria-[orientation=horizontal]:after:w-full aria-[orientation=horizontal]:after:translate-x-0 aria-[orientation=horizontal]:after:-translate-y-1/2 [&[aria-orientation=horizontal]>div]:rotate-90"
      data-separator="inactive"
      data-slot="resizable-handle"
      data-testid="_r_6_"
      id="_r_6_"
      role="separator"
      style="flex: 0 0 auto; touch-action: none"
      tabindex="0"
    />
    <div
      data-panel="true"
      data-slot="resizable-panel"
      data-testid="_r_7_"
      id="_r_7_"
      style="min-height: 0px; max-height: 100%; height: auto; min-width: 0px; max-width: 100%; width: auto; border: 0px; padding: 0px; margin: 0px; display: flex; flex: 40 1 0px; overflow: hidden"
    >
      <div
        style="max-height: 100%; max-width: 100%; flex-grow: 1; touch-action: pan-x"
      >
        <div
          class="flex h-full items-center justify-center p-4"
        >
          <span
            class="text-xs text-muted-foreground"
          >
            Results
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`resizable > withHandle 1`] = `
<div>
  <div
    class="flex size-full aria-[orientation=vertical]:flex-col min-h-48 max-w-lg rounded-lg border"
    data-group="true"
    data-slot="resizable-panel-group"
    data-testid="_r_8_"
    id="_r_8_"
    style="height: 100%; width: 100%; overflow: hidden; display: flex; flex-flow: row; touch-action: pan-y"
  >
    <div
      data-panel="true"
      data-slot="resizable-panel"
      data-testid="_r_9_"
      id="_r_9_"
      style="min-height: 0px; max-height: 100%; height: auto; min-width: 0px; max-width: 100%; width: auto; border: 0px; padding: 0px; margin: 0px; display: flex; flex: 29.999 1 0px; overflow: hidden"
    >
      <div
        style="max-height: 100%; max-width: 100%; flex-grow: 1; touch-action: pan-y"
      >
        <div
          class="flex h-full items-center justify-center p-4"
        >
          <span
            class="text-xs text-muted-foreground"
          >
            Left
          </span>
        </div>
      </div>
    </div>
    <div
      aria-controls="_r_9_"
      aria-orientation="vertical"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="29.999"
      class="relative flex w-px items-center justify-center bg-border ring-offset-background after:absolute after:inset-y-0 after:left-1/2 after:w-1 after:-translate-x-1/2 focus-visible:ring-1 focus-visible:ring-ring focus-visible:outline-hidden aria-[orientation=horizontal]:h-px aria-[orientation=horizontal]:w-full aria-[orientation=horizontal]:after:left-0 aria-[orientation=horizontal]:after:h-1 aria-[orientation=horizontal]:after:w-full aria-[orientation=horizontal]:after:translate-x-0 aria-[orientation=horizontal]:after:-translate-y-1/2 [&[aria-orientation=horizontal]>div]:rotate-90"
      data-separator="inactive"
      data-slot="resizable-handle"
      data-testid="_r_a_"
      id="_r_a_"
      role="separator"
      style="flex: 0 0 auto; touch-action: none"
      tabindex="0"
    >
      <div
        class="z-10 flex h-6 w-1 shrink-0 rounded-lg bg-border"
      />
    </div>
    <div
      data-panel="true"
      data-slot="resizable-panel"
      data-testid="_r_b_"
      id="_r_b_"
      style="min-height: 0px; max-height: 100%; height: auto; min-width: 0px; max-width: 100%; width: auto; border: 0px; padding: 0px; margin: 0px; display: flex; flex: 70.001 1 0px; overflow: hidden"
    >
      <div
        style="max-height: 100%; max-width: 100%; flex-grow: 1; touch-action: pan-y"
      >
        <div
          class="flex h-full items-center justify-center p-4"
        >
          <span
            class="text-xs text-muted-foreground"
          >
            Right
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
